--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
-    <title>LaGrowthMachine</title>
+    <title>Boilerplate</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
